fix:-webkit-overflow-scrolling: touch;2

--- a/AppianZ/src/sass/Oct3/home.scss
+++ b/AppianZ/src/sass/Oct3/home.scss
@@ -406,7 +406,7 @@ body {
   #popup-block-content-box {
     max-height: pr(780);
     overflow: auto;
-    -webkit-overflow-scrolling: touch;
+    -webkit-overflow-scrolling: auto;
     #popup-block-desc {
       position: relative;
       padding: pr(30);
